control/plasma_sf90.F90


      interface
         function PLASMA_sgecon_Tile_c(norm,A,anorm,rcond) &
          & bind(c, name='PLASMA_sgecon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgecon_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_sgecon_Tile_c
      end interface

      interface
         function PLASMA_sgelqf_Tile_c(A,T) &
          & bind(c, name='PLASMA_sgelqf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgelqf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_sgelqf_Tile_c
      end interface

      interface
         function PLASMA_sgelqs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_sgelqs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgelqs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_sgelqs_Tile_c
      end interface

      interface
         function PLASMA_sgels_Tile_c(trans,A,T,B) &
          & bind(c, name='PLASMA_sgels_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgels_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_sgels_Tile_c
      end interface

      interface
         function PLASMA_sgemm_Tile_c(transA,transB,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_sgemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgemm_Tile_c
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: transB
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_sgemm_Tile_c
      end interface

      interface
         function PLASMA_sgeqp3_Tile_c(A,jpvt,tau,work,rwork) &
          & bind(c, name='PLASMA_sgeqp3_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgeqp3_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: jpvt
            type(c_ptr), value :: tau
            type(c_ptr), value :: work
            type(c_ptr), value :: rwork
          end function PLASMA_sgeqp3_Tile_c
      end interface

      interface
         function PLASMA_sgeqrf_Tile_c(A,T) &
          & bind(c, name='PLASMA_sgeqrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgeqrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_sgeqrf_Tile_c
      end interface

      interface
         function PLASMA_sgeqrs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_sgeqrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgeqrs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_sgeqrs_Tile_c
      end interface

      interface
         function PLASMA_sgesdd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_sgesdd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgesdd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_sgesdd_Tile_c
      end interface

      interface
         function PLASMA_sgesv_Tile_c(A,IPIV,B) &
          & bind(c, name='PLASMA_sgesv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgesv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_sgesv_Tile_c
      end interface

      interface
         function PLASMA_sgesv_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_sgesv_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgesv_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_sgesv_incpiv_Tile_c
      end interface

      interface
         function PLASMA_sgesvd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_sgesvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgesvd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_sgesvd_Tile_c
      end interface

      interface
         function PLASMA_sgetrf_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_sgetrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_sgetrf_Tile_c
      end interface

      interface
         function PLASMA_sgetrf_incpiv_Tile_c(A,L,IPIV) &
          & bind(c, name='PLASMA_sgetrf_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrf_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
          end function PLASMA_sgetrf_incpiv_Tile_c
      end interface

      interface
         function PLASMA_sgetrf_nopiv_Tile_c(A) &
          & bind(c, name='PLASMA_sgetrf_nopiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrf_nopiv_Tile_c
            type(c_ptr), value :: A
          end function PLASMA_sgetrf_nopiv_Tile_c
      end interface

      interface
         function PLASMA_sgetrf_tntpiv_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_sgetrf_tntpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrf_tntpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_sgetrf_tntpiv_Tile_c
      end interface

      interface
         function PLASMA_sgetri_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_sgetri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetri_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_sgetri_Tile_c
      end interface

      interface
         function PLASMA_sgetrs_Tile_c(trans,A,IPIV,B) &
          & bind(c, name='PLASMA_sgetrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrs_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_sgetrs_Tile_c
      end interface

      interface
         function PLASMA_sgetrs_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_sgetrs_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sgetrs_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_sgetrs_incpiv_Tile_c
      end interface

      interface
         function PLASMA_ssyev_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_ssyev_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyev_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssyev_Tile_c
      end interface

      interface
         function PLASMA_ssyevd_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_ssyevd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyevd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssyevd_Tile_c
      end interface

      interface
         function PLASMA_ssyevr_Tile_c(jobz,range,uplo,A,vl,vu,il,iu,abstol,nbcomputedeig,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_ssyevr_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyevr_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: range
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_float), value :: vl
            real(kind=c_float), value :: vu
            integer(kind=c_int), value :: il
            integer(kind=c_int), value :: iu
            real(kind=c_float), value :: abstol
            type(c_ptr), value :: nbcomputedeig
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssyevr_Tile_c
      end interface

      interface
         function PLASMA_ssygst_Tile_c(itype,uplo,A,B) &
          & bind(c, name='PLASMA_ssygst_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssygst_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_ssygst_Tile_c
      end interface

      interface
         function PLASMA_ssygv_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_ssygv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssygv_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_ssygv_Tile_c
      end interface
